# sp-api

./: CHANGELOG.md  LICENSE  README.md  generator.py  pyproject.toml
.github/workflows/: publish.yml  release-please.yml
converter/: index.js  package-lock.json  package.json
converter/models/: aplusContent_2020-11-01.json  authorization.json  catalogItemsV0.json  catalogItems_2020-12-01.json  catalogItems_2022-04-01.json  definitionsProductTypes_2020-09-01.json  easyShip_2022-03-23.json  fbaInbound.json  fbaInventory.json  fbaSmallandLight.json  feeds_2020-09-04.json  feeds_2021-06-30.json  financesV0.json  fulfillmentInboundV0.json  fulfillmentOutbound_2020-07-01.json  listingsItems_2020-09-01.json  listingsItems_2021-08-01.json  listingsRestrictions_2021-08-01.json  merchantFulfillmentV0.json  messaging.json  notifications.json  ordersV0.json  productFeesV0.json  productPricingV0.json  productPricing_2022-05-01.json  reports_2020-09-04.json  reports_2021-06-30.json  sales.json  sellers.json  services.json  shipmentInvoicingV0.json  shipping.json  solicitations.json  tokens_2021-03-01.json  uploads_2020-11-01.json  vendorDirectFulfillmentInventoryV1.json  vendorDirectFulfillmentOrdersV1.json  vendorDirectFulfillmentOrders_2021-12-28.json  vendorDirectFulfillmentPaymentsV1.json  vendorDirectFulfillmentSandboxData_2021-10-28.json  (+8 more)
sp/aplus_content_2020_11_01/: __init__.py
sp/authorization/: __init__.py
sp/catalog_items_2020_12_01/: __init__.py
templates/: client.py.jinja  endpoint_module.py.jinja  model.py.jinja  package_init.py.jinja  types.py.jinja
(+1482 files in other folders)
